# sample-project-python

./: README.md  setup.cfg
src/sample_project/: main.py  requirements.txt
