[metadata]
name = soos-sample-project
version = 1.1.0-rc1
author = SOOS
author_email = dev@soos.io
license_files = LICENSE
description= SOOS ( https://soos.io ) is an independent software security company, located in Winooski, VT USA, building security software for your team. Used for testing purposes, this package is an example of a vulnerable package on a public registry.
keywords = soos, sca, package, sample, project, example, vulnerabilities, licenses, sbom, governance, dast, open source, oss
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/soos-io/sample-project-python
project_urls =
  Issues = https://github.com/soos-io/sample-project-python/issues
  Source = https://github.com/soos-io/sample-project-python
  About = https://soos.io
  Register = https://app.soos.io/register

# Classifiers help users find your project by categorizing it.
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: MIT License
  Intended Audience :: Developers
  Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
  =src
python_requires = >=3.6, <4
install_requires =
  requests==2.26.0
  certifi==2020.6.20
  idna==2.10
  urllib3==1.26.5
  charset-normalizer==2.0.12

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  soos-sample-project = sample_project.main:entry_point
